workloads/ingress/grafana/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  annotations:
    external-dns.alpha.kubernetes.io/managed-by: external-dns
spec:
  rules:
  - host: grafana.growbin.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
